Adding new api endpoints doc
